--- a/to_do_list.html
+++ b/to_do_list.html
@@ -23,18 +23,18 @@ A totally not basic to do list
 	</thead>
 
 	<tr>
-<th class="check">this</th>
+<th class="check">Done</th>
 <th><input type="input" placeholder="Enter an item to do..." id="input"></th>
 <th><button class="add">Add Item</button></th>
 </tr>
 
 	
-<tr class="listTr">
+<tr>
 <td class="check">Done</td>
 <td class="todo">Things to do</td>
 <td class="remove">Remove</td>
 </tr>
-<!-- 
+
 <tfoot>
 	<tr >
 		<td colspan="3">
@@ -42,7 +42,7 @@ A totally not basic to do list
 		</td>
 	</tr>
 
- -->
+
 
 </table>
 
